--- a/frontend/src/app/(landing)/components/Home/BestSellers/BestSellersItem/BestSellersItem.module.css
+++ b/frontend/src/app/(landing)/components/Home/BestSellers/BestSellersItem/BestSellersItem.module.css
@@ -51,3 +51,14 @@
     font-size: 1.2rem;
     padding-left: 10px;
 }
+
+@media (min-width: 1300px) {
+    .container {
+        flex-basis: 14%;
+        padding-right: 20px;
+    }
+
+    .container img {
+        width: 200px;
+    }
+}
