--- a/frontend/src/app/(landing)/components/Home/Deals/DealsList/DealsList.module.css
+++ b/frontend/src/app/(landing)/components/Home/Deals/DealsList/DealsList.module.css
@@ -13,3 +13,15 @@
     display: flex;
     padding: 0;
 }
+
+@media (min-width: 768px) {
+    .container {
+        overflow: auto;
+        padding: 10px 20px 50px 30px;
+    }
+
+    .container h3 {
+        font-size: 1.6rem;
+        padding: 50px 0;
+    }
+}
