--- a/frontend/src/app/(landing)/components/Home/Home.module.css
+++ b/frontend/src/app/(landing)/components/Home/Home.module.css
@@ -5,7 +5,7 @@
 .hero {
     background: url('./images/chocolate-cake.jpg');
     height: fit-content;
-    padding: 70px 0;
+    padding: 80px 0;
     text-align: center;
     background-position: 80% 50%;
     background-size: 290%;
@@ -32,7 +32,8 @@
 
 .shortcuts {
     overflow: auto;
-    padding-bottom: 40px;
+    border-bottom: 1.5px solid #cccccc;
+    padding-bottom: 20px;
     margin: 30px 0;
 }
 
@@ -47,7 +48,7 @@
 }
 
 .shortcuts img {
-    width: 90px;
+    width: 40px;
 }
 
 .shortcuts p {
@@ -55,11 +56,23 @@
     font-family: 'DMSans-Medium';
     margin-top: 7px;
     font-size: .9rem;
+    width: 80px;
+    padding: 0 5px;
+}
+
+.shortcuts li:first-child {
+    padding-left: 10px;
+}
+
+.shortcuts li:first-child p {
+    width: 50px;
+    position: relative;
+    top: -1px;
 }
 
 .corporate {
     text-align: center;
-    padding: 70px 20px 20px 20px;
+    padding: 70px 20px 40px 20px;
 }
 
 .corporate h2 {
@@ -198,4 +211,306 @@
     width: 300px;
     margin: 60px 0 20px 0;
     border-radius: 18px;
+}
+
+@media (min-width: 768px) {
+    .hero {
+        padding: 80px 80px;
+        text-align: left;
+        background-position: 80% 50%;
+        background-size: 120%;
+    }
+
+    .hero h1 {
+        font-size: 3rem;
+    }
+
+    .hero p {
+        padding: 0;
+        font-size: 1.2rem;
+    }
+
+    .shortcuts {
+        border-bottom: 2px solid #cccccc;
+    }
+
+    .shortcuts ul {
+        display: flex;
+        padding: 0 10px;
+    }
+
+    .shortcuts img {
+        width: 50px;
+    }
+
+    .corporate {
+        padding: 120px 20px 70px 20px;
+    }
+
+    .corporate h3 {
+        padding: 85px 0 35px 0;
+    }
+
+    .img_flex {
+        justify-content: space-between;
+    }
+
+    .img_flex div {
+        text-align: center;
+        flex-basis: unset;
+        padding-bottom: 30px;
+    }
+
+    .why {
+        text-align: left;
+        padding: 70px 35px 50px 55px;
+    }
+
+    .why h3 {
+        font-size: 1.8rem;
+        padding-bottom: 50px;
+    }
+
+    .why_flex {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .why_flex div {
+        flex-basis: 30%;
+    }
+
+    .why img {
+        width: 70px;
+    }
+
+    .why h4 {
+        font-size: 1.3rem;
+        padding-bottom: 20px;
+    }
+
+    .why p {
+        padding: 0;
+    }
+
+    .donut h3 {
+        width: 50%;
+        margin: auto;
+        font-size: 1.6rem;
+    }
+
+    .donut button {
+        font-family: 'DMSans-Regular';
+        padding: 11px 30px;
+        font-size: .99rem;
+    }
+
+    .donut img {
+        width: 50%;
+    }
+
+    .explorers {
+        padding: 100px 10px 40px 10px;
+    }
+
+    .explorers h3 {
+        width: 80%;
+        margin: auto;
+        font-size: 1.7rem;
+    }
+
+    .explorers p {
+        width: 74%;
+        margin: auto;
+        font-size: 1rem;
+    }
+
+    .explorers button {
+        padding: 12px 20px;
+        font-family: 'DMSans-Regular';
+    }
+
+    .explorers img {
+        width: 400px;
+    }
+}
+
+@media (min-width: 1024px) {
+    .hero {
+        background-size: 100%;
+    }
+
+    .hero h1 {
+        font-size: 3rem;
+        width: 60%;
+    }
+
+    .hero p {
+        width: 65%;
+    }
+
+    .shortcuts ul {
+        padding: 0 60px;
+        justify-content: space-between;
+    }
+
+    .corporate {
+        padding: 120px 70px 70px 70px;
+    }
+
+    .img_flex div:nth-child(1) img {
+        width: 100px;
+    }
+
+    .img_flex div:nth-child(2) img {
+        width: 130px;
+    }
+
+    .img_flex div:nth-child(3) img {
+        width: 80px;
+    }
+
+    .img_flex div:nth-child(4) img {
+        width: 90px;
+    }
+
+    .img_flex div:nth-child(5) img {
+        width: 70px;
+    }
+
+    .img_flex div:nth-child(6) img {
+        width: 130px;
+    }
+
+    .why h3 {
+        padding-bottom: 80px;
+    }
+
+    .donut {
+        display: flex;
+        padding: 120px 0 100px;
+        align-items: center;
+    }
+
+    .donut div {
+        flex-basis: 50%;
+    }
+
+    .donut div:first-child {
+        text-align: left;
+        padding-left: 100px;
+    }
+
+    .donut h3 {
+        width: 80%;
+        margin: 0;
+        padding: 0;
+    }
+
+    .donut img {
+        width: 60%;
+    }
+
+}
+
+@media (min-width: 1300px) {
+    .hero {
+        padding: 100px 100px;
+    }
+
+    .hero h1 {
+        font-size: 3.1rem;
+        width: 45%;
+    }
+
+    .hero p {
+        width: 45%;
+    }
+
+    .shortcuts ul {
+        padding: 0 110px;
+        justify-content: space-between;
+    }
+
+    .shortcuts img {
+        width: 70px;
+    }
+
+    .shortcuts p {
+        font-size: 1.1rem;
+        width: 100px;
+    }
+
+    .corporate {
+        padding: 150px 70px 100px 70px;
+    }
+
+    .corporate h2 {
+        font-size: 2.5rem;
+    }
+
+    .corporate p {
+        font-size: 1.2rem;
+    }
+
+    .corporate button {
+        font-size: 1.1rem;
+    }
+
+    .corporate h3 {
+        font-size: 1.4rem;
+    }
+
+    .img_flex {
+        justify-content: space-around;
+    }
+
+    .why {
+        padding: 70px 105px 50px 105px;
+    }
+
+    .why p {
+        font-size: 1.1rem;
+        width: 80%;
+    }
+
+    .donut h3 {
+        width: 85%;
+        font-size: 2.5rem;
+        margin: 0;
+        padding: 0;
+    }
+
+    .donut img {
+        width: 65%;
+    }
+
+    .explorers {
+        padding: 80px 160px 100px 160px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    .explorers {
+        text-align: left;
+    }
+
+    .explorers h3 {
+        margin: 0;
+        font-size: 2.2rem;
+        width: 80%;
+    }
+
+    .explorers p {
+        margin: 0;
+    }
+
+    .explorers div:first-child {
+        flex-basis: 60%;
+    }
+
+    .explorers div:last-child {
+        flex-basis: 30%;
+    }
 }
