--- a/frontend/src/app/(landing)/components/Home/Socials/Socials.module.css
+++ b/frontend/src/app/(landing)/components/Home/Socials/Socials.module.css
@@ -1,10 +1,78 @@
 .container {
-    padding: 30px 20px;
+    padding: 30px 25px;
     text-align: center;
 }
 
 .container h3 {
     font-family: 'DMSans-Bold';
+    font-size: 1.3rem;
+    padding-bottom: 10px;
 }
 
-.socials_flex {}
+.container p {
+    padding-bottom: 50px;
+}
+
+.socials_flex {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.socials_flex div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex-basis: 47%;
+}
+
+.socials_flex img {
+    display: block;
+}
+
+.socials_flex img:nth-child(1) {
+    width: 100%;
+}
+
+.socials_flex img:nth-child(2) {
+    width: 50px;
+    margin: 30px 0;
+}
+
+.socials_flex div:nth-child(3) img:nth-child(2) {
+    width: 60px;
+}
+
+@media (min-width: 768px) {
+    .container {
+        padding: 80px 55px;
+    }
+
+    .container h3 {
+        font-size: 2.2rem;
+    }
+
+    .container p {
+        padding-bottom: 70px;
+    }
+
+    .socials_flex {
+        justify-content: space-between;
+    }
+
+    .socials_flex div {
+        flex-basis: 23.5%;
+    }
+}
+
+@media (min-width: 768px) {
+    .container {
+        padding: 80px 115px;
+    }
+}
+
+@media (min-width: 1300px) {
+    .container {
+        padding: 80px 305px;
+    }
+}
